fix alignment on homepage carousel

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -205,8 +205,11 @@ a {
 
 .home-works-section {
     height: 870px;
-    background-color: #EBF0F2;
-    
+    background-color: #EBF0F2;   
+}
+
+.home-works-container {
+    height: 660px;
 }
 
 .recent-works-title {
@@ -244,6 +247,7 @@ a {
     position: relative;
     margin: 0 auto;
     margin-bottom: 70px;
+    height: 400px;
 }
 
 
@@ -323,7 +327,7 @@ a {
 .gallery-page-container {
     max-width: 1100px;
     margin: 0 auto;
-    margin-bottom: 125px;
+    margin-bottom: 70px;
 }
 
 .gallery-container {
@@ -352,7 +356,7 @@ a {
     overflow: hidden;
     /* max-width: 600px; */
     width: 80%;
-    height: 660px;
+    height: 730px;
     position: relative;
     margin: 0 auto;
 }
